--- a/app/src/main/res/layout/fragment_single_medicine.xml
+++ b/app/src/main/res/layout/fragment_single_medicine.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/light_blue"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:layoutDirection="rtl">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,11 +55,19 @@
         style="@style/SemiBold17Black"
         android:paddingTop="10dp"
         android:paddingHorizontal="23dp"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="20dp"/>
 
 
-    <include
-        layout="@layout/layout_medicine_choice"/>
+    <Spinner
+        android:id="@+id/singleMedicineFragSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        style="@style/SemiBold15Black"
+        android:gravity="center"
+        android:paddingHorizontal="10dp"
+        android:layout_marginHorizontal="50dp"
+        android:popupBackground="@drawable/edit_text_selector"
+        android:background="@drawable/edit_text_selector" />
 
     <TextView
         android:layout_width="match_parent"
