--- a/app/src/main/res/layout/layout_medicine_choice.xml
+++ b/app/src/main/res/layout/layout_medicine_choice.xml
@@ -16,7 +16,7 @@
                 android:weightSum="2">
 
                 <RadioButton
-                    android:id="@+id/radioOne"
+                    android:id="@+id/radio0.25"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
@@ -25,11 +25,11 @@
                     android:button="@null"
                     android:paddingVertical="20dp"
                     android:gravity="center"
-                    android:text="חצי כדור"
+                    android:text="1/4  כדור"
                     style="@style/SemiBold17Black"/>
 
                 <RadioButton
-                    android:id="@+id/radioTwo"
+                    android:id="@+id/radio1_2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
@@ -38,13 +38,13 @@
                     android:button="@null"
                     android:paddingVertical="20dp"
                     android:gravity="center"
-                    android:text="כדור"
+                    android:text="1/2  כדור"
                     style="@style/SemiBold17Black"/>
 
 
             </RadioGroup>
             <RadioGroup
-                android:id="@+id/rg_exponent_bottom"
+                android:id="@+id/rg_exponent_middle"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
@@ -53,7 +53,7 @@
                 android:weightSum="2">
 
                 <RadioButton
-                    android:id="@+id/radioThree"
+                    android:id="@+id/radio3_4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
@@ -62,11 +62,11 @@
                     android:button="@null"
                     android:paddingVertical="20dp"
                     android:gravity="center"
-                    android:text="כדור וחצי"
+                    android:text="3/4 כדור"
                     style="@style/SemiBold17Black"/>
 
                 <RadioButton
-                    android:id="@+id/radioForth"
+                    android:id="@+id/radio1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
@@ -75,9 +75,83 @@
                     android:button="@null"
                     android:paddingVertical="20dp"
                     android:gravity="center"
-                    android:text="שתי כדורים"
+                    android:text="כדור בודד"
                     style="@style/SemiBold17Black"/>
 
             </RadioGroup>
+
+    <RadioGroup
+        android:id="@+id/rg_exponent_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <RadioButton
+            android:id="@+id/radio1_1_4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_light_green_stroke"
+            android:button="@null"
+            android:paddingVertical="10dp"
+            android:gravity="center"
+            android:text="1.25 כדור"
+            style="@style/SemiBold17Black"/>
+
+        <RadioButton
+            android:id="@+id/radio2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_light_green_stroke"
+            android:button="@null"
+            android:paddingVertical="20dp"
+            android:gravity="center"
+            android:text="שתי כדורים"
+            style="@style/SemiBold17Black"/>
+
+    </RadioGroup>
+
+    <RadioGroup
+        android:id="@+id/rg_exponent_bott2om"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <RadioButton
+            android:id="@+id/radio1_1_22"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_light_green_stroke"
+            android:button="@null"
+            android:paddingVertical="10dp"
+            android:gravity="center"
+            android:text="כדור וחצי"
+            style="@style/SemiBold17Black"/>
+
+        <RadioButton
+            android:id="@+id/radio22"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_light_green_stroke"
+            android:button="@null"
+            android:paddingVertical="20dp"
+            android:gravity="center"
+            android:text="שתי כדורים"
+            style="@style/SemiBold17Black"/>
+
+    </RadioGroup>
 
 </LinearLayout>
