--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,111 +1,132 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="1000dp"
-    android:layout_width="500dp"
-    android:id="@+id/notification_background"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
     android:background="#B3707171"
-    android:layout_gravity="center"
-    android:layoutDirection="ltr"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingHorizontal="23dp"
+    android:layoutDirection="ltr">
 
-    <CheckBox
-        android:id="@+id/isHallucinationsBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:padding="10dp"
-        android:text="הזיות?"
-        android:textColor="#FFFFFF"
-        android:textSize="27sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/notificationFrame"
-        app:layout_constraintStart_toStartOf="@+id/notificationFrame"
-        app:layout_constraintTop_toBottomOf="@+id/reportStatusBtn" />
-    <TextView
-        android:id="@+id/reportStatusBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:padding="10dp"
-        android:text="שלח דיווח"
-        android:textColor="#FFFFFF"
-        android:textSize="27sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/notificationFrame"
-        app:layout_constraintStart_toStartOf="@+id/notificationFrame"
-        app:layout_constraintTop_toBottomOf="@+id/notificationFrame" />
-
-    <TextView
-        android:id="@+id/notificationOnBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="On"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/notificationFrame"
-        app:layout_constraintStart_toEndOf="@+id/notificationFrame"
-        app:layout_constraintTop_toTopOf="@+id/notificationFrame" />
-
-    <TextView
-        android:id="@+id/notificationOffBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="OFF"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/notificationFrame"
-        app:layout_constraintEnd_toStartOf="@+id/notificationFrame"
-        app:layout_constraintTop_toTopOf="@+id/notificationFrame" />
-
-    <TextView
-        android:id="@+id/notificationDyskinesiaBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:fontFamily="@font/assistant_extrabold"
-        android:padding="10dp"
-        android:text="דיסקנזיה"
-        android:textColor="#FFFFFF"
-        android:textSize="27sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/notificationFrame"
-        app:layout_constraintEnd_toEndOf="@+id/notificationFrame"
-        app:layout_constraintStart_toStartOf="@+id/notificationFrame" />
-
-
-    <FrameLayout
-        android:id="@+id/notificationFrame"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
         android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@color/transparent"
-            android:src="@drawable/pic" />
+        android:orientation="vertical">
 
         <TextView
+            style="@style/Bold23White"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/transparent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shape_light_green_top_corners"
             android:gravity="center"
-            android:text="שלום \n איך אתה מרגיש?"
-            android:textColor="@color/cardview_light_background"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="26sp"
+            android:paddingVertical="10dp"
+            android:shadowColor="@color/gray_black"
+            android:text="דיווח חדש" />
 
-    </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_light_green_stroke_borrom_cornners"
+            android:orientation="vertical"
+            android:paddingHorizontal="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="23dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:paddingHorizontal="10dp">
+
+
+                <RadioGroup
+                    android:id="@+id/reportRG"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:weightSum="3">
+
+                    <RadioButton
+                        android:id="@+id/notificationOnBtn"
+                        style="@style/SemiBold17Black"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_light_green_stroke"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:paddingVertical="20dp"
+                        android:text="On" />
+
+                    <RadioButton
+                        android:id="@+id/notificationDyskinesiaBtn"
+                        style="@style/SemiBold17Black"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_light_green_stroke"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:paddingVertical="20dp"
+                        android:text="דסקנזיה" />
+
+                    <RadioButton
+                        android:id="@+id/notificationOffBtn"
+                        style="@style/SemiBold17Black"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_light_green_stroke"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:paddingVertical="20dp"
+                        android:text="Off" />
+                </RadioGroup>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:alpha="0.3"
+               android:layout_marginVertical="15dp"
+                android:layout_marginHorizontal="20dp"
+                android:background="#9BA59D"/>
+
+            <TextView
+                android:id="@+id/notificationHallucinationsBtn"
+                style="@style/SemiBold17Black"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:background="@drawable/shape_light_green_stroke_selectable"
+                android:paddingHorizontal="30dp"
+                android:paddingVertical="20dp"
+                android:text=" הזיות  " />
+
+            <TextView
+                android:id="@+id/notificationReportBtn"
+                style="@style/Bold21White"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/btn_rectangle_blue"
+                android:gravity="center"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="15dp"
+                android:text="שלח דיווח" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</FrameLayout>
