--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/light_blue"
     android:orientation="vertical"
-    android:weightSum="2">
+    android:weightSum="1">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -51,37 +51,37 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="23dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="80dp"
         android:layout_weight="1"
         android:background="@drawable/shape_light_green_stroke_borrom_cornners"
         android:orientation="vertical"
         android:paddingHorizontal="23dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    <TextView
-        style="@style/Bold21White"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/mainFragReportBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="23dp"
-        android:background="@drawable/shape_light_green_top_corners"
-        android:gravity="center"
-        android:paddingVertical="5dp"
-        android:shadowColor="@color/gray_black"
-        android:text="דיווחים אחרונים" />
+        android:layout_height="90dp"
+        android:elevation="8dp"
+        android:layout_marginHorizontal="33dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginVertical="10dp"
+        card_view:cardElevation="10dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerReports"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="23dp"
-        android:layout_marginBottom="40dp"
-        android:layout_weight="1"
-        app:reverseLayout="true"
-        android:background="@drawable/shape_light_green_stroke_borrom_cornners"
-        android:orientation="vertical"
-        android:paddingHorizontal="23dp"
-        app:stackFromEnd="true"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            <TextView
+                style="@style/Bold21Black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingStart="10dp"
+                android:textAlignment="center"
+                android:drawablePadding="10dp"
+                android:text=" דיווח חדש"
+                app:drawableEndCompat="@drawable/ic_report" />
+
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -165,7 +165,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/mainFragReportBtn"
+            android:id="@+id/mainFragLogoutBtn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
@@ -183,9 +183,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:drawableTop="@drawable/ic_report"
+                    android:drawableTop="@drawable/ic_logout"
                     android:drawablePadding="5dp"
-                    android:text=" דיווח חדש" />
+                    android:text="התנתק" />
 
             </FrameLayout>
 
