--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,9 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#B3707171"
-    android:paddingHorizontal="23dp"
-    android:layoutDirection="ltr">
+    android:layoutDirection="rtl"
+    android:paddingHorizontal="23dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,10 +19,10 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/shape_light_green_top_corners"
             android:gravity="center"
-            android:textSize="26sp"
             android:paddingVertical="10dp"
             android:shadowColor="@color/gray_black"
-            android:text="דיווח חדש" />
+            android:text="דיווח חדש"
+            android:textSize="26sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,34 +94,75 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:alpha="0.3"
-               android:layout_marginVertical="15dp"
                 android:layout_marginHorizontal="20dp"
-                android:background="#9BA59D"/>
+                android:layout_marginVertical="15dp"
+                android:alpha="0.3"
+                android:background="#9BA59D" />
 
-            <TextView
-                android:id="@+id/notificationHallucinationsBtn"
-                style="@style/SemiBold17Black"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@drawable/shape_light_green_stroke_selectable"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="20dp"
-                android:text=" הזיות  " />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/notificationFallsBtn"
-                style="@style/SemiBold17Black"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@drawable/shape_light_green_stroke_selectable"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="20dp"
-                android:text=" נפילות " />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginEnd="15dp">
+
+                    <CheckBox
+                        android:id="@+id/notificationHallucinationsBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:button="@drawable/checkbox_selector"
+                        android:gravity="center"
+                        android:padding="5dp" />
+
+                    <TextView
+                        style="@style/SemiBold19Black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:padding="5dp"
+                        android:text="הזיות  " />
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp">
+
+                    <CheckBox
+                        android:id="@+id/notificationFallsBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:button="@drawable/checkbox_selector"
+                        android:gravity="center"
+                        android:padding="5dp" />
+
+                    <TextView
+                        style="@style/SemiBold19Black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:padding="5dp"
+                        android:text="נפילות" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/notificationReportBtn"
@@ -129,10 +170,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/btn_rectangle_blue"
                 android:gravity="center"
-                android:paddingHorizontal="15dp"
+                android:paddingHorizontal="30dp"
                 android:paddingVertical="15dp"
                 android:text="שלח דיווח" />
 
